[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-pi-mem"
version = "0.2.0"
description = "Open research scaffold for MEM-style hierarchical robot policies"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "transformers>=4.44,<5",
  "accelerate>=1.0",
  "einops>=0.8",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "openai>=1.54.0",
  "Pillow>=10.4.0",
  "safetensors>=0.4.5",
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/wingAGI/open-pi-mem"
Repository = "https://github.com/wingAGI/open-pi-mem"
Issues = "https://github.com/wingAGI/open-pi-mem/issues"

[project.optional-dependencies]
eval = [
  "google-genai>=1.16.0",
  "gymnasium>=0.29",
  "tqdm>=4.66",
]
data = [
  "tensorflow>=2.16",
  "tensorflow-datasets>=4.9",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
open-pi-mem = "open_pi_mem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
